--- a/gsm8k_eval.ipynb
+++ b/gsm8k_eval.ipynb
@@ -16,13 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n",
       "cannot find .env file\n"
      ]
     }
@@ -40,7 +42,7 @@
     "\n",
     "# we use gpt-4o-mini as default: current pricing is \n",
     "# $0.150 / 1M input tokens, $0.600 / 1M output tokens\n",
-    "def generate_gpt_response(prompt,messages=[], model=\"gpt-4o-mini\", temperature=0.7):\n",
+    "def generate_gpt_response(prompt,messages=[], model=\"gpt-3.5-turbo\", temperature=0.7):\n",
     "    messages.append({\"role\": \"user\", \"content\": prompt})\n",
     "            \n",
     "    response = client.chat.completions.create(\n",
@@ -66,12 +68,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "load gsm8k dataset"
+    "load gsm8k dataset. only use the datapoints for questions that were ablated in gsm_template"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 15, 19, 20, 23, 24, 25]\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import re\n",
+    "\n",
+    "q_indices = []\n",
+    "pattern = re.compile(r'q(\\d+)\\.py')\n",
+    "\n",
+    "for fname in os.listdir(\"gsm_template/\"):\n",
+    "    match = pattern.match(fname)\n",
+    "    if match:\n",
+    "        q_indices.append(int(match.group(1)))\n",
+    "\n",
+    "q_indices.sort()\n",
+    "print(q_indices)\n",
+    "print(len(q_indices))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -107,6 +140,36 @@
       "\n",
       "Q:\n",
       "Tina makes $18.00 an hour.  If she works more than 8 hours per shift, she is eligible for overtime, which is paid by your hourly wage + 1/2 your hourly wage.  If she works 10 hours every day for 5 days, how much money does she make?\n",
+      "\n",
+      "Q:\n",
+      "Tobias is buying a new pair of shoes that costs $95. He has been saving up his money each month for the past three months. He gets a $5 allowance a month. He also mows lawns and shovels driveways. He charges $15 to mow a lawn and $7 to shovel. After buying the shoes, he has $15 in change. If he mows 4 lawns, how many driveways did he shovel?\n",
+      "\n",
+      "Q:\n",
+      "Randy has 60 mango trees on his farm. He also has 5 less than half as many coconut trees as mango trees. How many trees does Randy have in all on his farm?\n",
+      "\n",
+      "Q:\n",
+      "Jasper will serve charcuterie at his dinner party. He buys 2 pounds of cheddar cheese for $10, a pound of cream cheese that cost half the price of the cheddar cheese, and a pack of cold cuts that cost twice the price of the cheddar cheese. How much does he spend on the ingredients?\n",
+      "\n",
+      "Q:\n",
+      "Joy can read 8 pages of a book in 20 minutes. How many hours will it take her to read 120 pages?\n",
+      "\n",
+      "Q:\n",
+      "James creates a media empire.  He creates a movie for $2000.  Each DVD cost $6 to make.  He sells it for 2.5 times that much.  He sells 500 movies a day for 5 days a week.  How much profit does he make in 20 weeks?\n",
+      "\n",
+      "Q:\n",
+      "Tim rides his bike back and forth to work for each of his 5 workdays.  His work is 20 miles away.  He also goes for a weekend bike ride of 200 miles.    If he can bike at 25 mph how much time does he spend biking a week?\n",
+      "\n",
+      "Q:\n",
+      "Bella bought stamps at the post office. Some of the stamps had a snowflake design, some had a truck design, and some had a rose design. Bella bought 11 snowflake stamps. She bought 9 more truck stamps than snowflake stamps, and 13 fewer rose stamps than truck stamps. How many stamps did Bella buy in all?\n",
+      "\n",
+      "Q:\n",
+      "Ann's favorite store was having a summer clearance. For $75 she bought 5 pairs of shorts for $7 each and 2 pairs of shoes for $10 each. She also bought 4 tops, all at the same price. How much did each top cost?\n",
+      "\n",
+      "Q:\n",
+      "Mary does her grocery shopping on Saturday. She does her shopping only at a specific store where she is allowed a credit of $100, which must be paid in full before her next shopping trip. That week she spent the full credit limit and paid $15 of it on Tuesday and $23 of it on Thursday. How much credit will Mary need to pay before her next shopping trip?\n",
+      "\n",
+      "Q:\n",
+      "Ralph is going to practice playing tennis with a tennis ball machine that shoots out tennis balls for Ralph to hit. He loads up the machine with 175 tennis balls to start with. Out of the first 100 balls, he manages to hit 2/5 of them. Of the next 75 tennis balls, he manages to hit 1/3 of them. Out of all the tennis balls, how many did Ralph not hit?\n",
       "\n"
      ]
     }
@@ -116,8 +179,10 @@
     "\n",
     "dataset = load_dataset(\"gsm8k\",'main')\n",
     "\n",
-    "train_data = dataset['train'].select(range(10))\n",
-    "test_data = dataset['test'].select(range(10))\n",
+    "train_data = dataset['train'].select(q_indices)\n",
+    "\n",
+    "# train_data = dataset['train'].select(range(10))\n",
+    "# test_data = dataset['test'].select(range(10))\n",
     "\n",
     "for i in range(len(train_data)):\n",
     "    print('Q:')\n",
@@ -136,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,25 +230,33 @@
     "    if eos:\n",
     "        answer = answer.split(eos)[0].strip()\n",
     "\n",
-    "    answer = answer.split('####')[-1].strip()\n",
+    "    answer = answer.split('####')\n",
+    "    \n",
+    "    if len(answer) > 2:\n",
+    "        answer = answer[-2].strip()\n",
+    "    elif len(answer) == 2:\n",
+    "        answer = answer[-1].strip()\n",
+    "    else:\n",
+    "        answer = \"NA\"\n",
     "\n",
-    "    for remove_char in [',', '$', '%', 'g']:\n",
-    "        answer = answer.replace(remove_char, '')\n",
+    "    if isinstance(answer, str):\n",
+    "        for remove_char in [',', '$', '%', 'g']:\n",
+    "            answer = answer.replace(remove_char, '')\n",
     "\n",
     "    try:\n",
     "        return int(answer)\n",
     "    except ValueError:\n",
     "        return answer\n",
     "\n",
-    "def get_num_answer(text):\n",
-    "    num_matches = re.findall(r'\\d+\\.?\\d*', text)\n",
+    "# def get_num_answer(text):\n",
+    "#     num_matches = re.findall(r'\\d+\\.?\\d*', text)\n",
     "\n",
-    "    if not num_matches:\n",
-    "        return None\n",
+    "#     if not num_matches:\n",
+    "#         return None\n",
     "    \n",
-    "    final_answer = num_matches[-1]\n",
+    "#     final_answer = num_matches[-1]\n",
     "\n",
-    "    return final_answer\n",
+    "#     return final_answer\n",
     "\n",
     "# Implement the function answer_from_gpt(question,temperature,num_shots), which should return the gpt answer as a string\n",
     "# (see how it is called in the function evaluate_fewshots below)\n",
@@ -219,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -233,141 +306,302 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 1/10 [00:04<00:40,  4.53s/it]"
+      "  5%|▌         | 1/20 [00:01<00:30,  1.63s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k=0: gpt_answer=18  true_answer=18\n"
+      "Q0: gpt_answer=72  true_answer=72\n",
+      "CORRECT\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 2/10 [00:08<00:33,  4.14s/it]"
+      " 10%|█         | 2/20 [00:03<00:35,  1.97s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k=1: gpt_answer=3  true_answer=3\n"
+      "Q1: gpt_answer=10  true_answer=10\n",
+      "CORRECT\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 3/10 [00:13<00:31,  4.56s/it]"
+      " 15%|█▌        | 3/20 [00:05<00:28,  1.67s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k=2: gpt_answer=70000  true_answer=70000\n"
+      "Q2: gpt_answer=5  true_answer=5\n",
+      "CORRECT\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 4/10 [00:15<00:20,  3.47s/it]"
+      " 20%|██        | 4/20 [00:06<00:22,  1.39s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k=3: gpt_answer=540  true_answer=540\n"
+      "Q3: gpt_answer=42  true_answer=42\n",
+      "CORRECT\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 5/10 [00:25<00:29,  5.89s/it]"
+      " 25%|██▌       | 5/20 [00:07<00:21,  1.41s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k=4: gpt_answer=20  true_answer=20\n"
+      "Q4: gpt_answer=624  true_answer=624\n",
+      "CORRECT\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 6/10 [00:33<00:26,  6.50s/it]"
+      " 30%|███       | 6/20 [00:09<00:22,  1.61s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k=5: gpt_answer=64  true_answer=64\n"
+      "Q5: gpt_answer=35  true_answer=35\n",
+      "CORRECT\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|███████   | 7/10 [00:36<00:16,  5.53s/it]"
+      " 35%|███▌      | 7/20 [00:11<00:20,  1.56s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k=6: gpt_answer=260  true_answer=260\n"
+      "Q6: gpt_answer=48  true_answer=48\n",
+      "CORRECT\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 8/10 [00:42<00:11,  5.76s/it]"
+      " 40%|████      | 8/20 [00:13<00:21,  1.76s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k=7: gpt_answer=120  true_answer=160\n"
+      "Q7: gpt_answer=6  true_answer=16\n",
+      "INCORRECT\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 9/10 [00:51<00:06,  6.50s/it]"
+      " 45%|████▌     | 9/20 [00:14<00:18,  1.70s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k=8: gpt_answer=45  true_answer=45\n"
+      "Q8: gpt_answer=41  true_answer=41\n",
+      "CORRECT\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:55<00:00,  5.50s/it]"
+      " 50%|█████     | 10/20 [00:16<00:16,  1.66s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k=9: gpt_answer=460  true_answer=460\n",
-      "accuracy=0.90\n"
+      "Q9: gpt_answer=990.00  true_answer=990\n",
+      "CORRECT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 55%|█████▌    | 11/20 [00:18<00:17,  1.89s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q11: gpt_answer=8  true_answer=5\n",
+      "INCORRECT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 12/20 [00:19<00:13,  1.66s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q12: gpt_answer=85  true_answer=85\n",
+      "CORRECT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 65%|██████▌   | 13/20 [00:20<00:10,  1.49s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q13: gpt_answer=35  true_answer=35\n",
+      "CORRECT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70%|███████   | 14/20 [00:22<00:08,  1.39s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q14: gpt_answer=5  true_answer=5\n",
+      "CORRECT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 75%|███████▌  | 15/20 [00:23<00:07,  1.49s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q15: gpt_answer=450000  true_answer=448000\n",
+      "INCORRECT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|████████  | 16/20 [00:25<00:05,  1.44s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q19: gpt_answer=16  true_answer=16\n",
+      "CORRECT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 85%|████████▌ | 17/20 [00:26<00:04,  1.44s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q20: gpt_answer=38  true_answer=38\n",
+      "CORRECT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|█████████ | 18/20 [00:28<00:03,  1.64s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q23: gpt_answer=5  true_answer=5\n",
+      "CORRECT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 95%|█████████▌| 19/20 [00:29<00:01,  1.47s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q24: gpt_answer=62  true_answer=62\n",
+      "CORRECT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [00:31<00:00,  1.57s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q25: gpt_answer=110  true_answer=110\n",
+      "CORRECT\n",
+      "accuracy=0.85\n",
+      "\n"
      ]
     },
     {
@@ -381,13 +615,20 @@
    "source": [
     "def evaluate_fewshots(temperature,num_shots):\n",
     "    num_corrects=0\n",
-    "    for k in  tqdm(range(len(train_data))):\n",
+    "    for k in tqdm(range(len(train_data))):\n",
     "        gpt_answer=answer_from_gpt(train_data[k]['question'],temperature=temperature,num_shots=num_shots)\n",
     "        true_answer= train_data[k]['answer'].split()[-1]\n",
-    "        print(f'k={k}: gpt_answer={gpt_answer}  true_answer={true_answer}')   # this is for debug only\n",
-    "        if float(gpt_answer) == float(true_answer):\n",
-    "            num_corrects += 1\n",
+    "        print(f'Q{q_indices[k]}: gpt_answer={gpt_answer}  true_answer={true_answer}')   # this is for debug only\n",
+    "        if gpt_answer != \"NA\":\n",
+    "            if float(gpt_answer) == float(true_answer):\n",
+    "                print(\"CORRECT\")\n",
+    "                num_corrects += 1\n",
+    "            else:\n",
+    "                print(\"INCORRECT\")\n",
+    "        \n",
+    "        \n",
     "    print(f'accuracy={num_corrects/len(train_data):0.2f}')\n",
+    "    print()\n",
     "\n",
     "temperature = 0\n",
     "num_shots = 0\n",
